socket.io script served by local webserver, not the robot

--- a/public/src/index.html
+++ b/public/src/index.html
@@ -94,7 +94,7 @@
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.2.10/angular-ui-router.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/angular-ui-utils/0.1.1/angular-ui-utils.min.js"></script>
 <script src="//cdnjs.cloudflare.com/ajax/libs/raphael/2.1.2/raphael-min.js"></script>
-<script src="<%= robotHostname %>/socket.io/socket.io.js"></script>
+<script src="/socket.io/socket.io.js"></script>
 <script src="//localhost:35729/livereload.js"></script>
 
 <!-- compiled JavaScript --><% scripts.forEach( function ( file ) { %>
