Localization, WiFi, LCD, etc
Four weeks of work...

- Changes to work on new Rev C BBB
- Added editorconfig file
- Added cleanup exit handler to do things like turn the LIDAR off, to save power, make it nicer, and make it obvious when the code has stopped
- New map fixture with the actual bottom half of the environment
- Added time profiles to some things
- Added motor max speed
- Calculating estimated position from motor desired speeds
- Added landmarks fixture, lists all the landmarks in the environment and determines which landmarks to use for a given estimated position. There are also two versions that attempt to calculate where landmarks should be, these did not work as well as hoped.
- LCD module to display any text on it, doesn't work unless it's run by itself for some reason
- LIDAR module based on the one from leshy but much simpler and with better performance. The C library that does the actual serial communication is using too much CPU however and that is making it lock up.
- Optical encoder module based on code previously in motors module
- WiFi module, does everything necessary to connect to WiFi
- findLandmarks helper function that identifies all landmarks in a set of lidar readings
- filterLandmarks helper function that filters landmarks to only include those close to the expected landmarks
- simulateLidar helper function that generates simulated lidar readings at any point on the map for testing

Web interface:

- Estimated position trail now uses correct data
- IMU data no longer shown
- Known map can be shown as walls, occupancy grid, or both
- LIDAR data is now being drawn
- Landmarks are now being drawn
- Localization code is running based on the cursor position for testing
- Removed webcam
- Socket.io now included in front-end code instead of being loaded from robot for performance

public2/lidarGen: generates simulated LIDAR data readings at initial position for testing, should use simulateLidar helper instead of this

--- a/public2/lib/index.html
+++ b/public2/lib/index.html
@@ -10,7 +10,8 @@
 </head>
 <body>
 <div id="content"></div>
-<script src="//arm.local:8080/socket.io/socket.io.js"></script>
+<!--<script src="//192.168.7.2:8080/socket.io/socket.io.js"></script>-->
+<!--<script src="/socket.io/client.js"></script>-->
 <script src="/bundle.js"></script>
 </body>
 </html>
